# Draft

./: GENENTA.md  H.sql  Page 1 - Introduction.md  Page 10 - Batch Operations and Transactions Optimization.md  Page 11 - Building a Reusable Database Layer Abstraction.md  Page 12 - Best Practices and Advanced Topics.md  Page 2 - Single Connection.md  Page 3 - Connection Pooling with Deadpool.md  Page 4 - Running Simple Queries.md  Page 5 - Insert Update Delete Operations.md  Page 6 - Transactions.md  Page 7 - Prepared Statements and Reuse.md  Page 8 - Mapping Rows to Rust Structs.md  Page 9 - Handling Common Errors and Safe Retrying.md  Rustmap.md  account option   agent.md  asd  asd1.md  assignment.md  att.test  automicbool.rs  axum-test.rs  bio  broadcast.rs  cat_chil.rs  catsort  cdata.sql  cdp  cf.rs  chrono.md  clap.md  cli.rs  code.es  code.rs  coin.md  conf.md  createdb.rs  data.sql  dataph  (+90 more)
postgres/: Cargo.toml  farmate.rs
postgres/src/: data.sql  main.rs  ref.rs
