[package]
name = "postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version="0.7", features = ["with-serde_json-1", "with-chrono-0_4"]}
serde_json = "1.0"